# hf_transformers_custom_model_ced

./: .gitignore  README.md  convert_ced_original_to_pytorch.py  example.ipynb  example_automodel.ipynb  example_finetune_esc50.ipynb  pyproject.toml  requirements.txt
ced_model/: configuration_ced.py  feature_extraction_ced.py  modeling_ced.py
tests/: test_feature_extraction_ced.py  test_inference.py
utils/: convert_ced_original_to_pytorch.py
